{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 395,
  "lineage": "7e03798e-75ce-2d76-d1d7-4bef42786b5b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:loadbalancer/app/dev-alb/c770a084719c7fe6",
            "arn_suffix": "app/dev-alb/c770a084719c7fe6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-582647538.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:loadbalancer/app/dev-alb/c770a084719c7fe6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0fee4d1faccbcfb14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ad40fbac3466538b"
              },
              {
                "subnet_id": "subnet-0c5303582ba65b56c"
              }
            ],
            "subnets": [
              "subnet-0ad40fbac3466538b",
              "subnet-0c5303582ba65b56c"
            ],
            "tags": {
              "Name": "dev-alb"
            },
            "tags_all": {
              "Name": "dev-alb"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:loadbalancer/app/dev-alb/c770a084719c7fe6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener/app/dev-alb/c770a084719c7fe6/71faa4f33c10df9c",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:447558491056:certificate/6dfda343-a6e7-47c1-b209-d3a4b6a60950",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:targetgroup/dev-tg/eab51cfdb14170cb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener/app/dev-alb/c770a084719c7fe6/71faa4f33c10df9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:loadbalancer/app/dev-alb/c770a084719c7fe6",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "allow_cloudfront_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:targetgroup/dev-tg/eab51cfdb14170cb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener-rule/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50/8640de5ab01e6140",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Origin-Verify",
                    "regex_values": [],
                    "values": [
                      "my-secret-12345"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener-rule/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50/8640de5ab01e6140",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50",
            "priority": 1,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.tg",
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "deny_all_other_requests",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener-rule/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50/3e21c3f805c7c302",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener-rule/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50/3e21c3f805c7c302",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:listener/app/dev-alb/c770a084719c7fe6/eaeb8b6befd06d50",
            "priority": 100,
            "region": "ap-northeast-1",
            "tags": {},
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.http",
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:targetgroup/dev-tg/eab51cfdb14170cb",
            "arn_suffix": "targetgroup/dev-tg/eab51cfdb14170cb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:targetgroup/dev-tg/eab51cfdb14170cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:447558491056:loadbalancer/app/dev-alb/c770a084719c7fe6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-tg"
            },
            "tags_all": {
              "Name": "dev-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:security-group/sg-0fee4d1faccbcfb14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fee4d1faccbcfb14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "447558491056",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:security-group/sg-093d7b2f21cdb187c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093d7b2f21cdb187c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fee4d1faccbcfb14"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "447558491056",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ecs-sg"
            },
            "tags_all": {
              "Name": "dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00de84303a8618c75",
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:elastic-ip/eipalloc-00de84303a8618c75",
            "association_id": "eipassoc-0f4b4b315a9d1b156",
            "domain": "vpc",
            "id": "eipalloc-00de84303a8618c75",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0944c51587cc80c7d",
            "private_dns": "ip-10-0-0-217.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.217",
            "public_dns": "ec2-3-114-172-95.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.114.172.95",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Name": "dev-nat-eip"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:internet-gateway/igw-0f040415e49b1cb87",
            "id": "igw-0f040415e49b1cb87",
            "owner_id": "447558491056",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00de84303a8618c75",
            "association_id": "eipassoc-0f4b4b315a9d1b156",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0114ada4c62785dd7",
            "network_interface_id": "eni-0944c51587cc80c7d",
            "private_ip": "10.0.0.217",
            "public_ip": "3.114.172.95",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad40fbac3466538b",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Name": "dev-nat"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:route-table/rtb-0e3df892d14aad57b",
            "id": "rtb-0e3df892d14aad57b",
            "owner_id": "447558491056",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0114ada4c62785dd7",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Name": "dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:route-table/rtb-0ef4286ce6904bc7c",
            "id": "rtb-0ef4286ce6904bc7c",
            "owner_id": "447558491056",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f040415e49b1cb87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b609c72a3dda0ab3",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0e3df892d14aad57b",
            "subnet_id": "subnet-0e758b7d61b97d6a3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09224fae066cd2bda",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0e3df892d14aad57b",
            "subnet_id": "subnet-0f4ed04c92f7a57e0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020d94924a405a16c",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ef4286ce6904bc7c",
            "subnet_id": "subnet-0ad40fbac3466538b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0299515c00c7517e2",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0ef4286ce6904bc7c",
            "subnet_id": "subnet-0c5303582ba65b56c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:subnet/subnet-0e758b7d61b97d6a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e758b7d61b97d6a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447558491056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-private-0"
            },
            "tags_all": {
              "Name": "dev-private-0"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:subnet/subnet-0f4ed04c92f7a57e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4ed04c92f7a57e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447558491056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:subnet/subnet-0ad40fbac3466538b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad40fbac3466538b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447558491056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-public-0"
            },
            "tags_all": {
              "Name": "dev-public-0"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:subnet/subnet-0c5303582ba65b56c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5303582ba65b56c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447558491056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0b9352f1d5341e2e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:447558491056:vpc/vpc-0b9352f1d5341e2e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000f6d86eb2932915",
            "default_route_table_id": "rtb-0d46ae6e8bf11d1f0",
            "default_security_group_id": "sg-06635ac7cb3f39540",
            "dhcp_options_id": "dopt-06f9d5de4738c84fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9352f1d5341e2e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d46ae6e8bf11d1f0",
            "owner_id": "447558491056",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}